--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+		<nav>
+		<ul>
+			<a href="file:///C:/Users/dell/Desktop/FOOD%20WASTE%20MENEGMENT%20SYSTEM/MY%20FIRST%20WEBSITE.html"><li>Home</li></a>
+			<a href="file:///C:/Users/dell/Desktop/FOOD%20WASTE%20MENEGMENT%20SYSTEM/ABOUT%20US.HTML"><li>About Us</li></a>
+			<a href="file:///C:/Users/dell/Desktop/FOOD%20WASTE%20MENEGMENT%20SYSTEM/CONTACT%20US.HTML"><li>Contact Us</li></a>
+		</ul>
+	</nav>
+	<h1>3 random videos</h1>
+	<video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"</video>
+	<video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></video>
+	<video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"></video>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
